--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,7 @@ deployment:
   production:
     branch: master
     commands:
+      - git fetch --unshallow
       - heroku maintenance:on --app pc-myflix
       - heroku pg:backups capture --app pc-myflix
       - git push git@heroku.com:pc-myflix.git $CIRCLE_SHA1:refs/heads/master
@@ -13,6 +14,7 @@ deployment:
   staging:
     branch: staging
     commands:
+      - git fetch --unshallow
       - heroku maintenance:on --app staging-pc-myflix
       - git push git@heroku.com:staging-pc-myflix.git $CIRCLE_SHA1:refs/heads/master
       - heroku run rake db:migrate --app staging-pc-myflix
