--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,5 @@
 # Ignore the database.yml file
 config/database.yml
 
-# Ignore application configuration
-/config/application.yml
+# Ignore the application.yml file
+config/application.yml
