--- a/spec/cassettes/StripeWrapper/StripeWrapper_Charge/_create/makes_a_card_declined_charge.yml
+++ b/spec/cassettes/StripeWrapper/StripeWrapper_Charge/_create/makes_a_card_declined_charge.yml
@@ -17,6 +17,8 @@ http_interactions:
       - Bearer sk_test_4X3vY6KpaQrgGfUhY1kqdafx
       Content-Type:
       - application/x-www-form-urlencoded
+      Stripe-Version:
+      - '2015-01-11'
       X-Stripe-Client-User-Agent:
       - '{"bindings_version":"1.30.3","lang":"ruby","lang_version":"2.2.3 p173 (2015-08-18)","platform":"x86_64-darwin14","engine":"ruby","publisher":"stripe","uname":"Darwin
         Perrys-MacBook-Pro.local 14.5.0 Darwin Kernel Version 14.5.0: Tue Sep  1 21:23:09
@@ -31,11 +33,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 10 Nov 2015 15:09:15 GMT
+      - Wed, 11 Nov 2015 18:50:31 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '782'
+      - '777'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,19 +51,19 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_7KIKFjjI1BSypz
+      - req_7Kj8zkkTG9QGD0
       Stripe-Version:
-      - '2015-10-16'
+      - '2015-01-11'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_175dkFLLwkS6PWMdpDvKyOti",
+          "id": "tok_1763fvLLwkS6PWMdM5HgYx0a",
           "object": "token",
           "card": {
-            "id": "card_175dkFLLwkS6PWMdfS3oS5fs",
+            "id": "card_1763fvLLwkS6PWMdAKF6nvZG",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,20 +86,20 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "24.228.222.151",
-          "created": 1447168155,
+          "client_ip": "4.15.27.3",
+          "created": 1447267831,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Tue, 10 Nov 2015 15:09:15 GMT
+  recorded_at: Wed, 11 Nov 2015 18:50:31 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: US-ASCII
-      string: amount=999&card=tok_175dkFLLwkS6PWMdpDvKyOti&currency=usd&description=a+valid+charge
+      string: amount=999&card=tok_1763fvLLwkS6PWMdM5HgYx0a&currency=usd&description=a+valid+charge
     headers:
       Accept:
       - "*/*; q=0.5, application/xml"
@@ -109,6 +111,8 @@ http_interactions:
       - Bearer sk_test_4X3vY6KpaQrgGfUhY1kqdafx
       Content-Type:
       - application/x-www-form-urlencoded
+      Stripe-Version:
+      - '2015-01-11'
       X-Stripe-Client-User-Agent:
       - '{"bindings_version":"1.30.3","lang":"ruby","lang_version":"2.2.3 p173 (2015-08-18)","platform":"x86_64-darwin14","engine":"ruby","publisher":"stripe","uname":"Darwin
         Perrys-MacBook-Pro.local 14.5.0 Darwin Kernel Version 14.5.0: Tue Sep  1 21:23:09
@@ -123,7 +127,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 10 Nov 2015 15:09:16 GMT
+      - Wed, 11 Nov 2015 18:50:32 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -141,9 +145,9 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_7KIK0jgmeTiaYU
+      - req_7Kj8P96HhxzaMZ
       Stripe-Version:
-      - '2015-10-16'
+      - '2015-01-11'
     body:
       encoding: UTF-8
       string: |
@@ -152,9 +156,9 @@ http_interactions:
             "message": "Your card was declined.",
             "type": "card_error",
             "code": "card_declined",
-            "charge": "ch_175dkFLLwkS6PWMdURC6gsjC"
+            "charge": "ch_1763fwLLwkS6PWMdSxchFgWX"
           }
         }
     http_version: 
-  recorded_at: Tue, 10 Nov 2015 15:09:16 GMT
+  recorded_at: Wed, 11 Nov 2015 18:50:32 GMT
 recorded_with: VCR 3.0.0
