--- a/spec/cassettes/StripeWrapper/StripeWrapper_Customer/_create/creates_a_customer_with_a_valid_card.yml
+++ b/spec/cassettes/StripeWrapper/StripeWrapper_Customer/_create/creates_a_customer_with_a_valid_card.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.stripe.com/v1/customers
+    uri: https://api.stripe.com/v1/tokens
     body:
       encoding: US-ASCII
-      string: email=john%40example.com&plan=myflixbase&source=tok_1763xsLLwkS6PWMdgXxMDItA
+      string: card[cvc]=314&card[exp_month]=11&card[exp_year]=2016&card[number]=4242424242424242
     headers:
       Accept:
       - "*/*; q=0.5, application/xml"
@@ -24,7 +24,7 @@ http_interactions:
         Perrys-MacBook-Pro.local 14.5.0 Darwin Kernel Version 14.5.0: Tue Sep  1 21:23:09
         PDT 2015; root:xnu-2782.50.1~1/RELEASE_X86_64 x86_64","hostname":"Perrys-MacBook-Pro.local"}'
       Content-Length:
-      - '76'
+      - '82'
   response:
     status:
       code: 200
@@ -33,11 +33,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Nov 2015 19:09:05 GMT
+      - Wed, 11 Nov 2015 18:50:34 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '3303'
+      - '777'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -51,7 +51,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_7KjQBzbY4NspRh
+      - req_7Kj8U3lBZnJu25
       Stripe-Version:
       - '2015-01-11'
       Strict-Transport-Security:
@@ -60,14 +60,108 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "cus_7KjQ5zKL3IkUlx",
+          "id": "tok_1763fyLLwkS6PWMdDEjS2S9N",
+          "object": "token",
+          "card": {
+            "id": "card_1763fyLLwkS6PWMdAqGHyKPw",
+            "object": "card",
+            "address_city": null,
+            "address_country": null,
+            "address_line1": null,
+            "address_line1_check": null,
+            "address_line2": null,
+            "address_state": null,
+            "address_zip": null,
+            "address_zip_check": null,
+            "brand": "Visa",
+            "country": "US",
+            "cvc_check": "unchecked",
+            "dynamic_last4": null,
+            "exp_month": 11,
+            "exp_year": 2016,
+            "fingerprint": "NPPbD705xls3U9sP",
+            "funding": "credit",
+            "last4": "4242",
+            "metadata": {},
+            "name": null,
+            "tokenization_method": null
+          },
+          "client_ip": "4.15.27.3",
+          "created": 1447267834,
+          "livemode": false,
+          "type": "card",
+          "used": false
+        }
+    http_version: 
+  recorded_at: Wed, 11 Nov 2015 18:50:34 GMT
+- request:
+    method: post
+    uri: https://api.stripe.com/v1/customers
+    body:
+      encoding: US-ASCII
+      string: email=gladys%40lueilwitzgislason.org&plan=myflixbase&source=tok_1763fyLLwkS6PWMdDEjS2S9N
+    headers:
+      Accept:
+      - "*/*; q=0.5, application/xml"
+      Accept-Encoding:
+      - gzip, deflate
+      User-Agent:
+      - Stripe/v1 RubyBindings/1.30.3
+      Authorization:
+      - Bearer sk_test_4X3vY6KpaQrgGfUhY1kqdafx
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Stripe-Version:
+      - '2015-01-11'
+      X-Stripe-Client-User-Agent:
+      - '{"bindings_version":"1.30.3","lang":"ruby","lang_version":"2.2.3 p173 (2015-08-18)","platform":"x86_64-darwin14","engine":"ruby","publisher":"stripe","uname":"Darwin
+        Perrys-MacBook-Pro.local 14.5.0 Darwin Kernel Version 14.5.0: Tue Sep  1 21:23:09
+        PDT 2015; root:xnu-2782.50.1~1/RELEASE_X86_64 x86_64","hostname":"Perrys-MacBook-Pro.local"}'
+      Content-Length:
+      - '88'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - nginx
+      Date:
+      - Wed, 11 Nov 2015 18:50:35 GMT
+      Content-Type:
+      - application/json
+      Content-Length:
+      - '3317'
+      Connection:
+      - keep-alive
+      Access-Control-Allow-Credentials:
+      - 'true'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Max-Age:
+      - '300'
+      Cache-Control:
+      - no-cache, no-store
+      Request-Id:
+      - req_7Kj8f8s66fo7CP
+      Stripe-Version:
+      - '2015-01-11'
+      Strict-Transport-Security:
+      - max-age=31556926; includeSubDomains
+    body:
+      encoding: UTF-8
+      string: |
+        {
+          "id": "cus_7Kj8aYmgwltYF8",
           "object": "customer",
           "account_balance": 0,
           "cards": {
             "object": "list",
             "data": [
               {
-                "id": "card_1763xsLLwkS6PWMdO3NaGxqU",
+                "id": "card_1763fyLLwkS6PWMdAqGHyKPw",
                 "object": "card",
                 "address_city": null,
                 "address_country": null,
@@ -79,10 +173,10 @@ http_interactions:
                 "address_zip_check": null,
                 "brand": "Visa",
                 "country": "US",
-                "customer": "cus_7KjQ5zKL3IkUlx",
+                "customer": "cus_7Kj8aYmgwltYF8",
                 "cvc_check": "pass",
                 "dynamic_last4": null,
-                "exp_month": 7,
+                "exp_month": 11,
                 "exp_year": 2016,
                 "fingerprint": "NPPbD705xls3U9sP",
                 "funding": "credit",
@@ -94,16 +188,16 @@ http_interactions:
             ],
             "has_more": false,
             "total_count": 1,
-            "url": "/v1/customers/cus_7KjQ5zKL3IkUlx/cards"
+            "url": "/v1/customers/cus_7Kj8aYmgwltYF8/cards"
           },
-          "created": 1447268945,
+          "created": 1447267834,
           "currency": "usd",
-          "default_card": "card_1763xsLLwkS6PWMdO3NaGxqU",
-          "default_source": "card_1763xsLLwkS6PWMdO3NaGxqU",
+          "default_card": "card_1763fyLLwkS6PWMdAqGHyKPw",
+          "default_source": "card_1763fyLLwkS6PWMdAqGHyKPw",
           "delinquent": false,
           "description": null,
           "discount": null,
-          "email": "john@example.com",
+          "email": "gladys@lueilwitzgislason.org",
           "livemode": false,
           "metadata": {},
           "shipping": null,
@@ -111,7 +205,7 @@ http_interactions:
             "object": "list",
             "data": [
               {
-                "id": "card_1763xsLLwkS6PWMdO3NaGxqU",
+                "id": "card_1763fyLLwkS6PWMdAqGHyKPw",
                 "object": "card",
                 "address_city": null,
                 "address_country": null,
@@ -123,10 +217,10 @@ http_interactions:
                 "address_zip_check": null,
                 "brand": "Visa",
                 "country": "US",
-                "customer": "cus_7KjQ5zKL3IkUlx",
+                "customer": "cus_7Kj8aYmgwltYF8",
                 "cvc_check": "pass",
                 "dynamic_last4": null,
-                "exp_month": 7,
+                "exp_month": 11,
                 "exp_year": 2016,
                 "fingerprint": "NPPbD705xls3U9sP",
                 "funding": "credit",
@@ -138,20 +232,20 @@ http_interactions:
             ],
             "has_more": false,
             "total_count": 1,
-            "url": "/v1/customers/cus_7KjQ5zKL3IkUlx/sources"
+            "url": "/v1/customers/cus_7Kj8aYmgwltYF8/sources"
           },
           "subscriptions": {
             "object": "list",
             "data": [
               {
-                "id": "sub_7KjQEDRSVGqla2",
+                "id": "sub_7Kj8lTns2E1x4t",
                 "object": "subscription",
                 "application_fee_percent": null,
                 "cancel_at_period_end": false,
                 "canceled_at": null,
-                "current_period_end": 1449860945,
-                "current_period_start": 1447268945,
-                "customer": "cus_7KjQ5zKL3IkUlx",
+                "current_period_end": 1449859835,
+                "current_period_start": 1447267835,
+                "customer": "cus_7Kj8aYmgwltYF8",
                 "discount": null,
                 "ended_at": null,
                 "metadata": {},
@@ -170,7 +264,7 @@ http_interactions:
                   "trial_period_days": null
                 },
                 "quantity": 1,
-                "start": 1447268945,
+                "start": 1447267835,
                 "status": "active",
                 "tax_percent": null,
                 "trial_end": null,
@@ -179,9 +273,9 @@ http_interactions:
             ],
             "has_more": false,
             "total_count": 1,
-            "url": "/v1/customers/cus_7KjQ5zKL3IkUlx/subscriptions"
+            "url": "/v1/customers/cus_7Kj8aYmgwltYF8/subscriptions"
           }
         }
     http_version: 
-  recorded_at: Wed, 11 Nov 2015 19:09:05 GMT
+  recorded_at: Wed, 11 Nov 2015 18:50:35 GMT
 recorded_with: VCR 3.0.0
