--- a/spec/cassettes/StripeWrapper/StripeWrapper_Customer/_create/does_not_create_a_customer_with_a_declined_card.yml
+++ b/spec/cassettes/StripeWrapper/StripeWrapper_Customer/_create/does_not_create_a_customer_with_a_declined_card.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/tokens
     body:
       encoding: US-ASCII
-      string: card[cvc]=314&card[exp_month]=11&card[exp_year]=2016&card[number]=4242424242424242
+      string: card[cvc]=314&card[exp_month]=11&card[exp_year]=2016&card[number]=4000000000000002
     headers:
       Accept:
       - "*/*; q=0.5, application/xml"
@@ -33,7 +33,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Nov 2015 18:50:30 GMT
+      - Wed, 11 Nov 2015 18:50:36 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -51,7 +51,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_7Kj8G7MPyCJ6AV
+      - req_7Kj81XDwf1GeLe
       Stripe-Version:
       - '2015-01-11'
       Strict-Transport-Security:
@@ -60,10 +60,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1763fuLLwkS6PWMdeGkLhqzg",
+          "id": "tok_1763g0LLwkS6PWMdpeVTtWuT",
           "object": "token",
           "card": {
-            "id": "card_1763fuLLwkS6PWMdaFEfF8Qd",
+            "id": "card_1763g0LLwkS6PWMddxzVSQMy",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -79,27 +79,27 @@ http_interactions:
             "dynamic_last4": null,
             "exp_month": 11,
             "exp_year": 2016,
-            "fingerprint": "NPPbD705xls3U9sP",
+            "fingerprint": "yiP624S1nbfezubi",
             "funding": "credit",
-            "last4": "4242",
+            "last4": "0002",
             "metadata": {},
             "name": null,
             "tokenization_method": null
           },
           "client_ip": "4.15.27.3",
-          "created": 1447267830,
+          "created": 1447267836,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Wed, 11 Nov 2015 18:50:30 GMT
+  recorded_at: Wed, 11 Nov 2015 18:50:36 GMT
 - request:
     method: post
-    uri: https://api.stripe.com/v1/charges
+    uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: amount=999&card=tok_1763fuLLwkS6PWMdeGkLhqzg&currency=usd&description=a+valid+charge
+      string: email=gladys%40lueilwitzgislason.org&plan=myflixbase&source=tok_1763g0LLwkS6PWMdpeVTtWuT
     headers:
       Accept:
       - "*/*; q=0.5, application/xml"
@@ -118,20 +118,20 @@ http_interactions:
         Perrys-MacBook-Pro.local 14.5.0 Darwin Kernel Version 14.5.0: Tue Sep  1 21:23:09
         PDT 2015; root:xnu-2782.50.1~1/RELEASE_X86_64 x86_64","hostname":"Perrys-MacBook-Pro.local"}'
       Content-Length:
-      - '84'
+      - '88'
   response:
     status:
-      code: 200
-      message: OK
+      code: 402
+      message: Payment Required
     headers:
       Server:
       - nginx
       Date:
-      - Wed, 11 Nov 2015 18:50:31 GMT
+      - Wed, 11 Nov 2015 18:50:36 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '2052'
+      - '134'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -145,99 +145,20 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_7Kj8C3iDIiRCl5
+      - req_7Kj8MOpjhV950S
       Stripe-Version:
       - '2015-01-11'
-      Strict-Transport-Security:
-      - max-age=31556926; includeSubDomains
     body:
       encoding: UTF-8
       string: |
         {
-          "id": "ch_1763fuLLwkS6PWMdEV1vWV0f",
-          "object": "charge",
-          "amount": 999,
-          "amount_refunded": 0,
-          "application_fee": null,
-          "balance_transaction": "txn_1763fvLLwkS6PWMdQNJhKmbV",
-          "captured": true,
-          "card": {
-            "id": "card_1763fuLLwkS6PWMdaFEfF8Qd",
-            "object": "card",
-            "address_city": null,
-            "address_country": null,
-            "address_line1": null,
-            "address_line1_check": null,
-            "address_line2": null,
-            "address_state": null,
-            "address_zip": null,
-            "address_zip_check": null,
-            "brand": "Visa",
-            "country": "US",
-            "customer": null,
-            "cvc_check": "pass",
-            "dynamic_last4": null,
-            "exp_month": 11,
-            "exp_year": 2016,
-            "fingerprint": "NPPbD705xls3U9sP",
-            "funding": "credit",
-            "last4": "4242",
-            "metadata": {},
-            "name": null,
-            "tokenization_method": null
-          },
-          "created": 1447267830,
-          "currency": "usd",
-          "customer": null,
-          "description": "a valid charge",
-          "destination": null,
-          "dispute": null,
-          "failure_code": null,
-          "failure_message": null,
-          "fraud_details": {},
-          "invoice": null,
-          "livemode": false,
-          "metadata": {},
-          "paid": true,
-          "receipt_email": null,
-          "receipt_number": null,
-          "refunded": false,
-          "refunds": {
-            "object": "list",
-            "data": [],
-            "has_more": false,
-            "total_count": 0,
-            "url": "/v1/charges/ch_1763fuLLwkS6PWMdEV1vWV0f/refunds"
-          },
-          "shipping": null,
-          "source": {
-            "id": "card_1763fuLLwkS6PWMdaFEfF8Qd",
-            "object": "card",
-            "address_city": null,
-            "address_country": null,
-            "address_line1": null,
-            "address_line1_check": null,
-            "address_line2": null,
-            "address_state": null,
-            "address_zip": null,
-            "address_zip_check": null,
-            "brand": "Visa",
-            "country": "US",
-            "customer": null,
-            "cvc_check": "pass",
-            "dynamic_last4": null,
-            "exp_month": 11,
-            "exp_year": 2016,
-            "fingerprint": "NPPbD705xls3U9sP",
-            "funding": "credit",
-            "last4": "4242",
-            "metadata": {},
-            "name": null,
-            "tokenization_method": null
-          },
-          "statement_descriptor": null,
-          "status": "paid"
+          "error": {
+            "message": "Your card was declined.",
+            "type": "card_error",
+            "param": "",
+            "code": "card_declined"
+          }
         }
     http_version: 
-  recorded_at: Wed, 11 Nov 2015 18:50:31 GMT
+  recorded_at: Wed, 11 Nov 2015 18:50:36 GMT
 recorded_with: VCR 3.0.0
