--- a/spec/cassettes/User_registers/with_valid_user_info_and_declined_card.yml
+++ b/spec/cassettes/User_registers/with_valid_user_info_and_declined_card.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.stripe.com/v1/charges
+    uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: amount=999&currency=usd&description=Sign+up+charge+for+john%40example.com&source=tok_175f5GLLwkS6PWMdN1MojHAW
+      string: email=john%40example.com&plan=myflixbase&source=tok_1763x6LLwkS6PWMdr5YKF4JF
     headers:
       Accept:
       - "*/*; q=0.5, application/xml"
@@ -17,12 +17,14 @@ http_interactions:
       - Bearer sk_test_4X3vY6KpaQrgGfUhY1kqdafx
       Content-Type:
       - application/x-www-form-urlencoded
+      Stripe-Version:
+      - '2015-01-11'
       X-Stripe-Client-User-Agent:
       - '{"bindings_version":"1.30.3","lang":"ruby","lang_version":"2.2.3 p173 (2015-08-18)","platform":"x86_64-darwin14","engine":"ruby","publisher":"stripe","uname":"Darwin
-        Perrys-MBP 14.5.0 Darwin Kernel Version 14.5.0: Tue Sep  1 21:23:09 PDT 2015;
-        root:xnu-2782.50.1~1/RELEASE_X86_64 x86_64","hostname":"Perrys-MBP"}'
+        Perrys-MacBook-Pro.local 14.5.0 Darwin Kernel Version 14.5.0: Tue Sep  1 21:23:09
+        PDT 2015; root:xnu-2782.50.1~1/RELEASE_X86_64 x86_64","hostname":"Perrys-MacBook-Pro.local"}'
       Content-Length:
-      - '109'
+      - '76'
   response:
     status:
       code: 402
@@ -31,11 +33,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 10 Nov 2015 16:35:03 GMT
+      - Wed, 11 Nov 2015 19:08:17 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '162'
+      - '134'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,9 +51,9 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_7KJiAV5NL05a6s
+      - req_7KjPr0J6lfhBQQ
       Stripe-Version:
-      - '2015-10-16'
+      - '2015-01-11'
     body:
       encoding: UTF-8
       string: |
@@ -59,10 +61,10 @@ http_interactions:
           "error": {
             "message": "Your card was declined.",
             "type": "card_error",
-            "code": "card_declined",
-            "charge": "ch_175f5HLLwkS6PWMdLmqEWOKh"
+            "param": "",
+            "code": "card_declined"
           }
         }
     http_version: 
-  recorded_at: Tue, 10 Nov 2015 16:35:04 GMT
+  recorded_at: Wed, 11 Nov 2015 19:08:17 GMT
 recorded_with: VCR 3.0.0
